# nodc-bvol

./: README.md  pyproject.toml
src/nodc_bvol/: __init__.py  bvol_nomp.py  translate_bvol_name.py  translate_bvol_name_size.py
src/nodc_bvol/CONFIG_FILES/: bvol_nomp.txt  translate_bvol_name_size.txt
