[project]
name = "pdm_bvol"
version = "0.1.0"
description = "Handling translations with nomp list etc."
authors = [
    {name = "Magnus Wenzer", email = "magnus.wenzer@smhi.se"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
